further work with advapi32 library - started to implement NativeInteropBridge which will adapt the native structures to pojo/model classes